@@ -41,6 +41,7 @@ Version 1.4.5 - CVS
 	image.
   - Empty src attribute on img tags causes logouts (IE only), replacing
     string with blank.png.
+  - Added configurable reply prefix to display options
 
 Version 1.4.4 - 21 January 2005
 -------------------------------
